ansible/roles/app/files/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web
  namespace: app-web
  labels:
    app: app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web
  template:
    metadata:
      labels:
        app: app-web
    spec:
      containers:
        - name: app-web
          image: nos22/debian10-apache
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          volumeMounts:
            - name: web-pv
              mountPath: /var/www/public
      volumes:
        - name: web-pv
          persistentVolumeClaim:
            claimName: app-pvc
