ansible/roles/app/files/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app-web
spec:
  selector:
    app: app-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
