ansible/roles/app/files/app-ingress_controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app-web
  labels:
    app: app-web
  annotations:
    haproxy.org/path-rewrite: '/'
    #kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: nos.by
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
